...
                    state = textFieldState,
                    onSearch = { expanded = false },
                    expanded = expanded,
                    onExpandedChange = { expanded = it },
                    placeholder = { Text(stringResource(R.string.add_location_search_placeholder)) },
                    leadingIcon = { Icon(Icons.Default.Search, contentDescription = null) },
                    modifier = Modifier.testTag("SearchInput")
                )
            },

            expanded = expanded,
            onExpandedChange = { expanded = it },
        ) {
...


            Column(
                modifier = Modifier
                    .verticalScroll(rememberScrollState())
                    .padding(4.dp)
                    .testTag("SuggestionsContainer")
            ) {
                limitedSuggestions.forEach { suggestion ->
                    ListItem(
                        headlineContent = { Text(suggestion.name) },

                        supportingContent = {
...
